--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node API-Hotel/index.js"
+    "start": "node API-Hotel/app.js"
   },
   "repository": {
     "type": "git",
