--- a/Login-Register-System/package.json
+++ b/Login-Register-System/package.json
@@ -17,7 +17,7 @@
     "express": "^4.17.3",
     "http-errors": "^2.0.0",
     "mariadb": "^3.0.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
   },
   "devDependencies": {
