--- a/Login-Register-System/package.json
+++ b/Login-Register-System/package.json
@@ -16,6 +16,7 @@
     "csv-parser": "^3.0.0",
     "express": "^4.17.3",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
