--- a/API-Hotel/package.json
+++ b/API-Hotel/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/CC22-HO01-TravelokaSigapore-HotelRanks/API-Recommendation#readme",
   "dependencies": {
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fastest-validator": "^1.12.0",
+    "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
