--- a/API-Hotel/package.json
+++ b/API-Hotel/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/CC22-HO01-TravelokaSigapore-HotelRanks/API-Recommendation#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fastest-validator": "^1.12.0",
