--- a/Login-Register-System/package.json
+++ b/Login-Register-System/package.json
@@ -16,10 +16,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mariadb": "^3.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
   },
