--- a/Review-Endpoint/package.json
+++ b/Review-Endpoint/package.json
@@ -6,13 +6,14 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.20.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon -r dotenv/config app.js"
   },
   "keywords": [
     "nodejs",
