--- a/Review-Endpoint/package.json
+++ b/Review-Endpoint/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.20.0"
   },
