--- a/.github/workflows/CloudBuildLoginRegister.yml
+++ b/.github/workflows/CloudBuildLoginRegister.yml
@@ -5,7 +5,11 @@ on:
     branches:
       - 'main'
     paths:
-    # Only run when there's a changes in API-Hotel Folders
+      - 'Login-Register-System/**'
+  pull_request:
+    branches:
+      - 'main'
+    paths:
       - 'Login-Register-System/**'
 
 env:
